<resources>
    <string name="app_name">BookScape</string>
    <string name="salvar">Salvar</string>
    <string name="autor_do_livro">Autor do livro</string>
    <string name="titulo_do_livro">Titulo do livro</string>
    <string name="voltar">Voltar</string>
    <string name="booklist">BookList</string>
    <string name="sair">Sair</string>
    <string name="e_mail">E-mail:</string>
    <string name="nome_de_usuario">Nome de usuario:</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="possui_conta">Já possui uma conta? Faça login</string>
    <string name="senha">Senha:</string>
    <string name="the_online_library">The online library</string>
    <string name="search_for">Search for a book or author:</string>
    <string name="my_account">Account</string>
    <string name="all_rights_reserved">All rights reserved</string>
    <string name="bookscape">BookScape</string>
    <string name="livros_encontrados">Livros Encontrados</string>
    <string name="n_o_possui_uma_conta_cadastre_se">Não possui uma conta? Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="login">Login</string>
    <string name="livro_adicionado_com_sucesso">Livro adicionado com sucesso!</string>
    <string name="ir_para_booklist">Ir para BookList</string>
    <string name="user_not_found">Usuário não encontrado. Faça o cadastro</string>
    <string name="logged_in">Login efetuado</string>
    <string name="email_cadastrado">E-mail já cadastrado</string>
    <string name="preencha_todos_os_campos">Preencha todos os campos</string>
    <string name="senha_incorreta">Senha incorreta</string>
    <string name="cadastro_realizado_com_sucesso">Cadastro realizado com sucesso!</string>
</resources>