<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titulo_cadastro_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/peralta"
            android:text="@string/cadastro"
            android:textAlignment="center"
            android:textColor="@color/petroleum_blue"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/username_title_cadastro_activity"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username_title_cadastro_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/alata"
            android:text="@string/nome_de_usuario"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/username_cadastro_activity" />

        <EditText
            android:id="@+id/username_cadastro_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"
            android:fontFamily="@font/alata"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/username_title_cadastro_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/email_titulo_cadastro_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:fontFamily="@font/alata"
            android:text="@string/e_mail"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/user_email_cadastro_activity"
            app:layout_constraintTop_toBottomOf="@id/username_cadastro_activity" />

        <EditText
            android:id="@+id/user_email_cadastro_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"
            android:fontFamily="@font/alata"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/senha_titulo_cadastro_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_titulo_cadastro_activity" />

        <TextView
            android:id="@+id/senha_titulo_cadastro_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/alata"
            android:text="@string/senha"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/password_cadastro_activity"
            app:layout_constraintTop_toBottomOf="@id/user_email_cadastro_activity" />

        <EditText
            android:id="@+id/password_cadastro_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"
            android:fontFamily="@font/alata"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/senha_titulo_cadastro_activity" />

        <TextView
            android:id="@+id/link_cadastro_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/alata"
            android:text="@string/possui_conta"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@id/btn_enter_cadastro_activity"
            app:layout_constraintTop_toBottomOf="@id/password_cadastro_activity" />

        <Button
            android:id="@+id/btn_enter_cadastro_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:backgroundTint="@color/dark_blue"
            android:fontFamily="@font/peralta"
            android:padding="12dp"
            android:text="@string/cadastrar"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_cadastro_activity" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/logo_cadastro_activity"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>