<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/lighter_blue"
    app:cardCornerRadius="40dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardElevation="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp">

            <ImageView
                android:id="@+id/imagem"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toTopOf="@id/texto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/texto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/alata"
                android:text="@string/livro_adicionado_com_sucesso"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagem"
                app:layout_constraintBottom_toTopOf="@id/btn_booklist"/>

            <Button
                android:id="@+id/btn_booklist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/petroleum_blue"
                android:text="@string/ir_para_booklist"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/alata"
                app:layout_constraintBottom_toTopOf="@id/btn_voltar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/texto" />

            <Button
                android:id="@+id/btn_voltar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/petroleum_blue"
                android:text="@string/voltar"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/alata"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/btn_booklist"
                app:layout_constraintStart_toStartOf="@id/btn_booklist"
                app:layout_constraintTop_toBottomOf="@id/btn_booklist" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>