<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/peralta"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/petroleum_blue"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/email_titulo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/alata"
            android:text="E-mail:"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@id/email"
            app:layout_constraintTop_toBottomOf="@id/titulo" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"
            android:fontFamily="@font/alata"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/senha_titulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_titulo"
            tools:text="email@gmail.com" />

        <TextView
            android:id="@+id/senha_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/alata"
            android:text="Senha:"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@id/senha"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <EditText
            android:id="@+id/senha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"
            android:fontFamily="@font/alata"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/senha_titulo"
            tools:text="senha123" />

        <TextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/alata"
            android:text="@string/n_o_possui_uma_conta_cadastre_se"
            android:textAlignment="center"
            android:textColor="@color/petroleum_blue"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@id/btn_enter"
            app:layout_constraintTop_toBottomOf="@id/senha" />

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/dark_blue"
            android:fontFamily="@font/peralta"
            android:padding="12dp"
            android:text="@string/entrar"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/link" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>