<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/petroleum_blue">

    <ImageButton
        android:id="@+id/btn_voltar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="15dp"
        android:backgroundTint="@color/petroleum_blue"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_return"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/frame"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:backgroundTint="@color/lighter_blue"
            android:elevation="10dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toTopOf="@id/nome_usuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imagem_usuario"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_user"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/nome_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame" />

        <TextView
            android:id="@+id/email_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/lighter_blue"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/nome_usuario"
            app:layout_constraintStart_toStartOf="@id/nome_usuario"
            app:layout_constraintTop_toBottomOf="@id/nome_usuario" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_booklist"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/lighter_blue"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@id/btn_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_usuario">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/lighter_blue"
                    android:fontFamily="@font/peralta"
                    android:text="@string/booklist"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:backgroundTint="@color/light_blue"
            android:fontFamily="@font/peralta"
            android:text="@string/sair"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/imagem"
            app:layout_constraintEnd_toEndOf="@id/btn_booklist"
            app:layout_constraintStart_toStartOf="@id/btn_booklist"
            app:layout_constraintTop_toBottomOf="@id/btn_booklist" />

        <ImageView
            android:id="@+id/imagem"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_logout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>